# hprolog

./: README.md  a.dot  hprolog.cabal  p1.pro  p2.pro  p3.pro  p4.pro  p5.pro  p6.pro  stack.yaml  temp  tree.dot  tree2.dot  tree3.dot  tree4.dot
report/: 0-title.aux  0-title.tex  1-intro.aux  1-intro.tex  2-analysis.aux  2-analysis.tex  3-construct.aux  4-technology.aux  4-technology.tex  5-outro.aux  5-outro.tex  6-biblio.aux  6-biblio.tex  listings.inc.aux  macros.inc.aux  preamble.inc.aux  preamble.inc.tex  restful.tex  rpz.aux  rpz.blg  rpz.out  rpz.tex  rpz.toc
report/diagram_src/: authorization.rsf  create_test.rsf  pass_test.rsf  registration.rsf  usecase.graphmlz
report/diagram_src/sequnce/: untitled.vpp  untitled.vpp~20  untitled.vpp~21
report/img/: cp.graphmlz
src/: Main.hs
src/Language/: Prolog.hs
src/Language/Prolog/: Algorithm.hs  Bool.hs  Helper.hs  IO.hs  Math.hs  Parser.hs  Printer.hs  Semantics.hs  Simplifier.hs  Syntax.hs
src/Language/Prolog/Printer/: Dot.hs  Graphviz.hs
src/Language/Prolog/Semantics/: Converters.hs  Types.hs
src/Prolog/: Helper.hs  Math.hs  Parser.hs  Printer.hs  Prolog.hs  Semantics.hs  Simplifier.hs  Syntax.hs  Unification.hs
src/Prolog/Parser/: Expr.hs  Term.hs
