name:                hprolog
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hprolog#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hprolog
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , mtl
                     , containers
                     , transformers
                     , bifunctors
                     , parallel
                     , deepseq
  other-modules:       Language.Prolog.Syntax
                     , Language.Prolog.Parser
                     , Language.Prolog
                     , Language.Prolog.Semantics
                     , Language.Prolog.Printer
                     , Language.Prolog.Math
                     , Language.Prolog.Helper
                     , Language.Prolog.Bool
                     , Language.Prolog.Simplifier
                     , Language.Prolog.Semantics.Converters
                     , Language.Prolog.Semantics.Types
                     , Language.Prolog.Algorithm
                     , Language.Prolog.IO
  default-extensions:  DataKinds
                     , GADTs
                     , KindSignatures
                     , TypeFamilies
                     , UndecidableInstances
                     , TypeOperators
                     , FlexibleInstances
                     , FlexibleContexts
                     , RecordWildCards
