cabal-version: >=1.10
name: hprolog
version: 0.1.0.0
license: BSD3
license-file: LICENSE
copyright: 2018 Author name here
maintainer: example@example.com
author: Author name here
homepage: https://github.com/githubuser/hprolog#readme
category: Web
build-type: Simple
extra-source-files:
    README.md

executable hprolog
    main-is: Main.hs
    hs-source-dirs: src
    other-modules:
        Language.Prolog.Syntax
        Language.Prolog.Parser
        Language.Prolog
        Language.Prolog.Semantics
        Language.Prolog.Math
        Language.Prolog.Helper
        Language.Prolog.Bool
        Language.Prolog.Simplifier
        Language.Prolog.Semantics.Converters
        Language.Prolog.Semantics.Types
        Language.Prolog.Algorithm
        Language.Prolog.IO
        Language.Prolog.Printer.Graphviz
        Language.Prolog.Printer.Dot
    default-language: Haskell2010
    default-extensions: DataKinds GADTs KindSignatures TypeFamilies
                        UndecidableInstances TypeOperators FlexibleInstances
                        FlexibleContexts RecordWildCards OverloadedStrings
                        DeriveDataTypeable
    build-depends:
        base >=4.7 && <5,
        parsec -any,
        mtl -any,
        containers -any,
        transformers -any,
        bifunctors -any,
        parallel -any,
        deepseq -any,
        graphviz -any,
        text -any,
        filepath -any,
        cmdargs -any
